--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Deploy to IIS folder
       run: |
-        Remove-Item -Recurse -Force "C:\webserver\net8iisdeploy"  # nếu muốn xóa cũ
+        Remove-Item -Recurse -Force "C:\webserver\net8iisdeploy" -ErrorAction SilentlyContinue
         Copy-Item -Recurse -Force ./publish/* "C:\webserver\net8iisdeploy"
 
     - name: Restart IIS
